--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.14"
+    "semantic-ui-css": "^2.2.14",
+    "semantic-ui-react": "^0.78.1"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
